lab/05-gitops-argocd/manifests/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops-lab
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
