lab/05-gitops-argocd/manifests/gitea-stripprefix.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gitea-stripprefix
  namespace: gitops-lab
spec:
  stripPrefix:
    prefixes:
      - /gitea
